--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Janhavi Nagalkar - Portfolio</title>
+    <title>Mihir Nagalkar - Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
